--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,20 @@
 <resources>
     <string name="app_name">FlashVocab</string>
-
     <string name="studyvocabulary">Study Vocabulary</string>
     <string name="cardbrowser">Card Browser</string>
     <string name="action_settings">Settings</string>
+    <string name="Welcome2FlashVocab">Welcome to FlashVocab</string>
+
+    <string name="dots">..........</string>
+    <string name="Word">Word: </string>
+    <string name="POS">POS: </string>
+    <string name="Meaning">Meaning: </string>
+    <string name="Example">Example: </string>
+    <string name="Synonym">Synonym: </string>
+    <string name="Antonym">Antonym: </string>
+
+    <string name="NextCard">Next Card</string>
+
+
+
 </resources>
